# project-raven

./: .eslintrc.cjs  .gitignore  .premium-paths  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  ProjectRavenPlan.txt  ProjectRavenPlan_v3_ProductionGrade.txt  ProjectRavenPlan_v5_ProductionGrade.txt  ProjectRavenPlan_v6_ProductionGrade.txt  ProjectRavenPlan_v9_ProductionGrade.txt  README.md  electron-builder.json5  index.html  package-lock.json  package.json  prompt.md  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.cursor/plans/rules/: cursorrules.mdc
.cursor/rules/: general-rules.mdc
.github/workflows/: build-aec-deps.yml  ci.yml
docs/: LAUNCH_CHECKLIST.md  SECRETS_RUNBOOK.md  TESTING_GUIDE.md
e2e/: dashboard.spec.ts  onboarding.spec.ts  playwright.config.ts  recording.spec.ts  settings.spec.ts  window.spec.ts
e2e/fixtures/: electronApp.ts
electron/: globalHotkeys.ts  main.ts  preload.ts  settings.ts
scripts/: bundle-gstreamer-mac.sh  bundle-gstreamer-win.bat  sync-to-opensource.sh  verify-aec-health.sh  verify-gstreamer-build.sh  verify-swift-build.sh
src/main/: analytics.ts  audioManager.ts  autoUpdater.ts  claudeService.ts  constants.ts  index.ts  ipc.ts  ipcThrottle.ts  logger.ts  permissions.ts  proLoader.ts  sentry.ts  store.ts  systemAudioNative.ts  transcriptionService.ts  trayManager.ts  validators.ts  windowManager.ts
src/main/__tests__/: analytics.test.ts  anthropicProvider.test.ts  audioManager.test.ts  authService.test.ts  autoUpdater.test.ts  builtinModes.test.ts  claudeService.test.ts  database-operations.test.ts  database.test.ts  ipc.test.ts  ipcThrottle.test.ts  logger.test.ts  openaiProvider.test.ts  permissions.test.ts  proLoader.test.ts  providerFactory.test.ts  ragService.test.ts  sentry.test.ts  sessionManager.test.ts  store.test.ts  summaryService.test.ts  transcriptionService.test.ts  trayManager.test.ts  validators.test.ts  windowManager.test.ts
src/main/__tests__/integration/: aiPipeline.test.ts  databaseRoundTrip.test.ts  ragPipeline.test.ts  sessionLifecycle.test.ts
src/main/services/: authIpc.ts  authService.ts  builtinModes.ts  database.ts  ragService.ts  sessionManager.ts  summaryService.ts  syncService.ts
src/main/services/ai/: anthropicProvider.ts  openaiProvider.ts  providerFactory.ts  types.ts
src/main/services/migrations/: 005_add_session_messages.ts
src/native/aec/: CMakeLists.txt  build-deps-win.bat  build-deps.sh  build-webrtcdsp-plugin.sh  package-lock.json  package.json
src/native/aec/src/: aec_addon.cpp  win_delay_load_hook.cc
src/native/swift/AudioCapture/: Package.swift
src/native/swift/AudioCapture/Sources/AudioCapture/: main.swift
src/native/swift/AudioCapture/Sources/CAecBridge/: empty.c
src/native/swift/AudioCapture/Sources/CAecBridge/include/: aec_bridge.h  module.modulemap
src/native/webrtc-aec/: CMakeLists.txt  README.md
src/native/webrtc-aec/include/: aec_api.h
src/native/webrtc-aec/src/: aec_api.cpp
src/native/windows/: Cargo.toml  README.md  package.json
src/native/windows/src/: lib.rs  wasapi.rs
src/preload/: index.ts
src/renderer/: index.html
src/renderer/dist-electron/: main.js  preload.mjs
src/renderer/src/: App.tsx  main.tsx
src/renderer/src/assets/: index.css
src/renderer/src/components/: ErrorBoundary.tsx  InputBar.tsx  Onboarding.tsx  Overlay.tsx  OverlayTourFree.tsx  ResponsePanel.tsx  Settings.tsx  StatusBar.tsx  TabBar.tsx  TitleBar.tsx  TranscriptPanel.tsx
src/renderer/src/components/auth/: ForgotPasswordScreen.tsx  LoginScreen.tsx  SignUpScreen.tsx
src/renderer/src/components/dashboard/: Dashboard.tsx  Header.tsx  ModeEditorModal.tsx  RecordingChip.tsx  SearchResultsView.tsx  SessionDetail.tsx  SessionList.tsx  SettingsModal.tsx  Sidebar.tsx  UpdateBanner.tsx
src/renderer/src/components/dashboard/settings/: AboutTab.tsx  ApiKeysTab.tsx  AudioTab.tsx  BillingTab.tsx  GeneralTab.tsx  HotkeysTab.tsx  ImageCropModal.tsx  LanguageTab.tsx  ProfileTab.tsx
src/renderer/src/components/overlay/: ChatTab.tsx  ControllerPill.tsx  OverlayInput.tsx  OverlayNotification.tsx  OverlayToolbar.tsx  OverlayWindow.tsx  ResponsePanel.tsx  TranscriptTab.tsx  useMousePassthrough.ts  useOverlayDrag.ts  useOverlayResize.ts
src/renderer/src/components/shared/: ConfirmModal.tsx  Toast.tsx
src/renderer/src/hooks/: useAppMode.ts  useAudioCapture.ts  useDeepgram.ts
src/renderer/src/lib/: logger.ts
src/renderer/src/services/: audioCapture.ts  microphoneCapture.ts  sharedAudioContext.ts  systemAudioCapture.ts  worklet.ts
src/renderer/src/stores/: appStore.ts
src/renderer/src/types/: global.d.ts
