[package]
name = "raven-windows-audio"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["async"] }
napi-derive = "2"
windows = { version = "0.52", features = [
    "Win32_Media_Audio",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_System_Threading",
] }
rubato = "0.14"

[build-dependencies]
napi-build = "2"
